# AutomaticPianoFingering

./: .gitignore  LICENSE  README.md  evaluate.py  evaluate_dataset.py  export_detail.py  main.py  nguyentac.txt  pyproject.toml  review.txt
scripts/: audit_fingering.py  demo_grand_staff.py  demo_musicxml.py  error_analysis.py  export_fingering.py  export_phrases_xml.py  pig_eval.py  pig_eval_simple.py  segmentation_audit.py
src/: __init__.py  fingering_solver.py  musicxml_parser.py  musicxml_writer.py  pattern_library.py  physics_model.py
src/automatic_piano_fingering.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/fingering/core/: keyboard.py
src/fingering/io/: musicxml_reader.py
src/fingering/models/: note_event.py
src/fingering/phrasing/: __init__.py  boundary_detector.py  chord_heuristic.py  comfort_checker.py  cross_phrase.py  fingering_auditor.py  hand_position.py  hand_reset.py  harmonic_skeleton.py  intent_analyzer.py  motif_engine.py  pattern_library.py  period_detector.py  phrase.py  phrase_dp.py  phrase_selector.py  pipeline.py  position_planner.py  scale_fingering.py  score_profile.py  thumb_placement_planner.py  voice_separation.py
src/fingering/simple/: __init__.py  fingering_dp.py  pipeline.py
test_file/: FN7ALfpGxiI_fingering.musicxml  FN7ALfpGxiI_fingering.txt  label_SB9SYPjjgHQ.txt
tests/phrasing/: __init__.py  test_phrase_aware.py
