[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automatic-piano-fingering"
version = "0.1.0"
description = "Automatic piano fingering that thinks like a real pianist"
requires-python = ">=3.10"
dependencies = [
    "music21>=9.1",
    "numpy>=1.26",
    "dataclasses-json>=0.6",
]

[project.optional-dependencies]
neural = [
    "torch>=2.2",
    "torchcrf>=1.1",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
